# Scrutinize

./: .env  .env.example  .gitignore  Makefile  README.md  cv.md  docker-compose.yml  pytest.ini  report.aux  report.tex
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  utputFormat
backend/app/: __init__.py  main.py
backend/app/api/: library.py  router.py  routes.py  search.py  upload.py
backend/app/core/: access_log.py  config.py  database.py  deps.py  password_security.py  rate_limit.py
backend/app/dev/: ingestion_check.py
backend/app/middleware/: rate_limit.py
backend/app/models/: file.py  pipeline_log.py  processing_job.py  project.py  segment.py
backend/app/schemas/: file.py  health.py  job.py  library.py  search.py  segment.py  storage.py  upload.py
backend/app/services/: audio_processor.py  cloudinary_storage.py  cloudinary_utils.py  embedding_service.py  file_deletion.py  health.py  ingestion.py  job_orchestrator.py  media_content.py  media_utils.py  openai_retry.py  project_service.py  qdrant_errors.py  search_service.py  segment_windowing.py  text_processor.py  transcription_service.py  upload_utils.py  vector_store.py  (+2 more)
backend/migrations/: 001_initial.sql  002_fk_cascade.sql  003_logging.sql  004_simplify_logging.sql  005_unified_logging.sql  006_multi_tenant.sql  007_project_passwords.sql
backend/scripts/: apply_migrations.py  check_audio_ingestion.py  check_ffmpeg.py  check_search.py  check_text_ingestion.py  check_video_ingestion.py  cloudinary_smoke.py  print_config.py  test_llm.py
backend/tests/: test_vector_store.py
(+153 files in other folders)
