[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrutinize-backend"
version = "0.1.0"
description = "Scrutinize multi-modal AI embedding and retrieval backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4",
    "cloudinary>=1.41",
    "fastapi>=0.115",
    "httpx>=0.28",
    "openai>=1.58",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.17",
    "qdrant-client>=1.17.0,<1.19.0",
    "redis>=5.2",
    "sqlmodel>=0.0.22",
    "tiktoken>=0.8",
    "uvicorn[standard]>=0.32",
    "pypdf[image]>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.8",
    "httpx>=0.28",
    "pip-audit>=2.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
"app.services.v2.prompts" = ["*.txt"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "system: system tests",
    "security: security tests",
    "v2: v2 local LLM pipeline tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
